fix: align connect button at vertical center

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -252,7 +252,7 @@ body {
   }
 
   .connect-button-container {
-    justify-content: end !important;
+    /* justify-content: end !important; */
   }
 }
 
